# website-monitor

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindgRPC.cmake
common/: job.h  log_util.cc  log_util.h  options.cc  options.h  port_posix.h  retcount.h  service_interface.h  task_interface.h  type_safe_queue.h  utils.cc  utils.h  varint.cc  varint.h
common/rpc/: async_service_interface.h  grpc_call.h  grpc_util.h
conf/: node_local_cache_test.config  node_log.config  node_service.config  taskserver.config  taskserver_log.config
cwebclient/: CMakeLists.txt  grpc_remote_master.cc  grpc_remote_master.h  master_interface.h  web_client.cc
doc/: command_proto.md  design.md
ext/gtest/: CMakeLists.txt
node/: CMakeLists.txt  data_proc_service.cc  data_proc_service.h  grpc_remote_node.cc  grpc_remote_node.h  grpc_service.cc  grpc_service.h  local_cache_util.cc  local_cache_util.h  logger.cc  logger.h  node.cc  node_client.h  node_interface.h  node_server.cc  node_server.h  node_service.cc  node_service.h  options.cc  options.h  taskmanager_service.cc  taskmanager_service.h
node/curl/: curl_header.cc  curl_header.h  curl_lib.cc  curl_lib.h
node/dataproc/: add_info_process.cc  add_info_process.h  compress_process.cc  compress_process.h  data_proc_interface.h  encrypt_process.cc  encrypt_process.h  process_lib.cc  process_lib.h  wal_process.cc  wal_process.h  zmq_process.cc  zmq_process.h
node/response/: curl_response.cc  curl_response.h  ping_response.cc  ping_response.h  response_interface.h
node/task/: dns_task.cc  dns_task.h  http_task.cc  http_task.h  ping_task.cc  ping_task.h  task_factory.cc  task_factory.h  task_interface.h
node/test/: CMakeLists.txt  curl_test.cc  grpc_client_test.cc  ping_task_test.cc  slice_test.cc  test_task.cc  zmq_proc_test.cc
node/util/: curl_util.cc  curl_util.h  ping_util.cc  ping_util.h
protos/: master_service.proto  task_content.proto
taskserver/: CMakeLists.txt  grpc_master_service.cc  grpc_master_service.h  local_cache_util.cc  local_cache_util.h  local_cache_util_interface.h  logger.cc  logger.h  master.cc  master.h  options.cc  options.h  server.cc  task_cache.h
taskserver/levedb/: local_cached_interface.h
taskserver/test/: CMakeLists.txt  levedb_client_test.cc  local_cached_util_test.cc
test/: CMakeLists.txt  node_client_local_cache_test.cc  node_client_local_cache_test.h  node_client_task_test.cc  node_client_task_test.h  node_client_test.cc  taskserver_local_cached_test.cc  taskserver_local_cached_test.h  taskserver_test.cc
zmqserver/: CMakeLists.txt  logger.h  options.cc  options.h  server.cc
